feat: 新增部分插件 Closes ${branchName}