@@ -237,7 +237,7 @@ public class GuFastDateFormat extends Format {
 	 * @throws IllegalArgumentException if the Locale has no date pattern defined
 	 */
 	public static synchronized GuFastDateFormat getDateInstance(int style, TimeZone timeZone, Locale locale) {
-		Object key = new Integer(style);
+		Object key = Integer.valueOf(style);
 		if (timeZone != null) {
 			key = new Pair(key, timeZone);
 		}
@@ -320,7 +320,7 @@ public class GuFastDateFormat extends Format {
 	 * @throws IllegalArgumentException if the Locale has no time pattern defined
 	 */
 	public static synchronized GuFastDateFormat getTimeInstance(int style, TimeZone timeZone, Locale locale) {
-		Object key = new Integer(style);
+		Object key = Integer.valueOf(style);
 		if (timeZone != null) {
 			key = new Pair(key, timeZone);
 		}
@@ -411,7 +411,7 @@ public class GuFastDateFormat extends Format {
 	public static synchronized GuFastDateFormat getDateTimeInstance(int dateStyle, int timeStyle, TimeZone timeZone,
 			Locale locale) {
 
-		Object key = new Pair(new Integer(dateStyle), new Integer(timeStyle));
+		Object key = new Pair(Integer.valueOf(dateStyle), Integer.valueOf(timeStyle));
 		if (timeZone != null) {
 			key = new Pair(key, timeZone);
 		}
